--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -1,7 +1,8 @@
 <main class="px-6 py-4">
-
+<h1 class="font-bold mb-10 text-2xl">Coupon Management</h1>
     <!-- Top: Search + Create Coupon -->
     <div class="flex justify-between items-center mb-4">
+       
         <!-- Search Form -->
     <div class="flex items-center gap-2">
         <form action="/admin/coupon" method="GET" class="flex items-center gap-2">
@@ -95,7 +96,7 @@
     
                 <!-- Previous Page -->
                 <li>
-                    <a href="/admin/coupons?page=<%= currentPage - 1 %>&search=<%= search %>"
+                    <a href="/admin/coupon?page=<%= currentPage - 1 %>&search=<%= search %>"
                         class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 <%= currentPage === 1 ? 'pointer-events-none opacity-50' : '' %>">
                         &lt;
                     </a>
@@ -104,8 +105,8 @@
                 <!-- Page Numbers -->
                 <% for(let i=1; i <=totalPages; i++) { %>
                     <li>
-                        <a href="/admin/coupons?page=<%= i %>&search=<%= search %>"
-                            class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 <%= currentPage === i ? 'z-10 text-yellow-600 border-yellow-300 bg-yellow-50' : '' %>">
+                        <a href="/admin/coupon?page=<%= i %>&search=<%= search %>"
+                            class="flex items-center justify-center px-4 h-10 leading-tight text-gray-900 bg-yellow border border-gray-200 hover:bg-yellow-500 <%= currentPage === i ? 'z-10 text-white  bg-yellow-500' : '' %>">
                             <%= i %>
                         </a>
                     </li>
