cart stock management bug fixed

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -15,7 +15,7 @@
             <%=error%>
           </div>
           <% } %>
-            <input type="text" placeholder="Name" class="input-field" id="name" name="name" />
+            <input type="text" placeholder="Name" class="input-field" id="name" name="name" maxlength="20" />
             <div id="error1" class="error-message"></div>
             <input type="email" placeholder="Email" class="input-field" id="email" name="email" />
             <div id="error2" class="error-message"></div>
