--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -3,6 +3,12 @@
     <!-- Shopping Cart -->
     <div class="flex-1 max-w-3xl bg-white p-6 rounded-lg shadow space-y-6">
         <h2 class="text-2xl font-semibold mb-4">Shopping Cart</h2>
+        <% if (stockMessage) { %>
+            <div class=" border-yellow-500 text-yellow-700 p-3 rounded mb-4">
+                <%= stockMessage %>
+            </div>
+            <% } %>
+
 
         <% if (!cart || cart.items.length===0) { %>
             <div class="text-center py-10">
