--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -55,6 +55,7 @@
               <option value="price-high">Price: High to Low</option>
               <option value="name-az">Name: A - Z</option>
               <option value="name-za">Name: Z - A</option>
+              <option value="best-selling">Best Selling</option>
             </select>
           </div>
 
